added image & assets folder

--- a/index.html
+++ b/index.html
@@ -4,22 +4,25 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Hello</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <!--[if lt IE 7]>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Hello</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <h3>How are things?</h3>
-        <p>If you are interested <br>in purchasing this domain, <br>click <a href = "mailto: info@theweblab.ie"> here</a></p>
-        
-        <script src="" async defer></script>
-    </body>
+    <h3>How are things?</h3>
+    <p>If you are interested <br>in purchasing this domain, <br>Email <a href="mailto: info@theweblab.ie"> here</a></p>
+
+    <script src="" async defer></script>
+</body>
+
 </html>
