--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Hello</title>
+    <title>www.glencarconstruction.ie</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -18,11 +20,35 @@
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+    <div class="container-fluid containertop">
 
-    <h3>How are things?</h3>
-    <p>If you are interested <br>in purchasing this domain, <br>Email <a href="mailto: info@theweblab.ie"> here</a></p>
+        <div class="row justify-content-center">
+            <!-- Welcome Text Column -->
+            <div class="col-12 col2 content">
+                <div>
+                    <span>www.glencarconstruction.ie</span>
+                    <p>&nbsp;</p>
+                    <p>How are things?</p>
+                    <p>If you are interested <br>in purchasing this domain
+                </div>
+                <div>
+                    <p>click<br><a class="here-style" href="mailto: info@theweblab.ie">here</a><br>to email</p>
+                </div>
+            </div>
+        </div>
+        <!-- <h3>How are things?</h3>
+        <p>If you are interested <br>in purchasing this domain, <br>click <a href="mailto: info@theweblab.ie">
+                here</a><br>to email</p> -->
+    </div>
+
 
     <script src="" async defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+        integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
+        integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
